[tool.poetry]
name = "district-language-exchange"
version = "0.1.0"
description = ""
authors = ["davemaguire <32852526+davemaguire@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "district_language_exchange"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.0"
numpy = "^1.24.2"
twilio = "^8.0.0"
langchain = "^0.0.136"
pendulum = "^2.1.2"
openai = "^0.27.4"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
